# IncidentOpsEnv

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  __init__.py  app.py  client.py  core_env.py  grader.py  inference.py  models.py  openenv.yaml  openenv_server_source.py  out.txt  pyproject.toml  remote_app.py  remote_dockerfile  requirements.txt  smoke_test.py
.agents/skills/deploy-check/: SKILL.md
.agents/skills/incident-qa/: SKILL.md
.agents/skills/investigate/: SKILL.md
.agents/skills/retro/: SKILL.md
.agents/skills/sre-office-hours/: SKILL.md
.agents/skills/task-review/: SKILL.md
scratch/: manual_test_verbose.py  out_app.txt  test_evals.py
server/: app.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py  utils.py
